Add: Task 3.2: PDP add2cart without locale

--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -27,6 +27,12 @@ td {
 img.product-tile {
   max-width: 64px;
 }
+.error {
+  color: red;
+}
+.success {
+  color: green;
+}
 
 /* Page specific styles */
 body.product-list {
